system1/istio-gw/vs1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: system1-user1
spec:
  hosts:
    - "system1.app.rwx.systems"
  gateways:
    - system-gateway
  http:
    - match:
        - headers:
            x-user-id:
              exact: user1
          uri:
            prefix: /user/
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 3000
            host: http-app1-service
