system1/istio-gw/vs2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: system1-user2
spec:
  hosts:
    - "system1.app.rwx.systems"
  gateways:
    - system-gateway
  http:
    - match:
        - headers:
            x-user:
              exact: user2
      route:
        - destination:
            port:
              number: 3000
            host: http-app2-service
